[project]
name = "dkapi_server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.7",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.37",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "numpydoc>=1.8.0",
    "pytest>=8.3.4",
    "sphinx>=8.1.3",
]

[tool.pytest.ini_options]
pythonpath = "./src/"

[tool.uvicorn.ini_options]
pythonpath = "./src/"
